--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<script src="player.js"></script>
+		<script src="main.js"></script>
 		<script>
 			function updateStart() {
 				window.addEventListener('keydown', function (e) {
