--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 			
 			function updateStart() {
 				for(let i = 1; i <= 9; i++) {
-					for(let i = 1; i <= 9; i++) {
+					for(let j = 1; j <= 9; j++) {
 						let span = document.createElement('span');
 						if(i === 5 && j === 5) {
 							span.innerHTML = "@";
