--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 						} else {
 							span.innerHTML = ".";
 						}
-						
+						span.id = ""+j+i;
 						document.getElementById("game").appendChild(span);
 					}
 					let br = document.createElement('br');
