--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 					let br = document.createElement('br');
 					document.getElementById("game").appendChild(br);
 				}
-				camera.draw;
+				camera.draw();
 				window.addEventListener('keydown', function (e) {
 				e.preventDefault();
 					switch(e.keyCode) {
