--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 				font-family:monospace;
 			}
 		</style>
-		<script src="https://github.com/wwwtyro/perlin.js/blob/master/perlin.js"></script>
+		<script src="perlin.js"></script>
 		<script src="main.js"></script>
 		<script>
 			
