--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 				font-family:monospace;
 			}
 		</style>
-		<script type="applications/javascript" src="https://raw.githubusercontent.com/wwwtyro/perlin.js/master/perlin.js"></script>
+		<script type="application/javascript" src="https://raw.githubusercontent.com/wwwtyro/perlin.js/master/perlin.js"></script>
 		<script src="main.js"></script>
 		<script>
 			
