--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 		<script>
 			
 			function updateStart() {
-				for(let i = 1; i <= 9; i++) {
-					for(let j = 1; j <= 9; j++) {
+				for(let i = 1; i <= camera.size; i++) {
+					for(let j = 1; j <= camera.size; j++) {
 						let span = document.createElement('span');
-						span.id = ""+j+i;
+						span.id = ""+j+","+i;
 						document.getElementById("game").appendChild(span);
 					}
 					let br = document.createElement('br');
