--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		</style>
 		<script src="perlin.js"></script>
 		<script src="main.js"></script>
+		<script src="monsters.js"></script>
 		<script>
 			
 			function updateStart() {
