--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		<script src="perlin.js"></script>
 		<script src="main.js"></script>
 		<script src="monsters.js"></script>
+		<script src="items.js"></script>
 		<script>
 			
 			function updateStart() {
